--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 .block-wrapper {
   position: relative;
   clip-path: inset(10% 10% 10% 10% round 20%, 20%);
-  box-shadow: 2px 20px 20px -10px rgba(0,0,0,0.5);
+  /* box-shadow: 2px 20px 20px -10px rgba(0,0,0,0.5); */
   overflow: hidden;
   width: var(--block-size);
 }
@@ -29,6 +29,14 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.shadow {
+  box-shadow: 0 1px 1px -10px rgba(0,0,0,0.5), 
+              0 2px 2px -10px rgba(0,0,0,0.5), 
+              0 4px 4px -10px rgba(0,0,0,0.5), 
+              0 8px 8px -10px rgba(0,0,0,0.5),
+              0 16px 16px -10px rgba(0,0,0,0.5);
 }
 
 .block {
