--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *, body, html {
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
 }
 
 :root {
@@ -9,7 +10,7 @@
 }
 
 body {
-  background: #444;
+  background-color: #000;
 }
 
 h3 {
@@ -18,8 +19,11 @@ h3 {
 }
 
 .wrapper {
-  height: 100vh;
-  width: 100%;
+  max-width: 400px;
+  margin: 40px auto;
+  padding: 30px 20px;
+  background: #444;
+  border-radius: 5px;
 }
 
 .block-wrapper {
@@ -62,7 +66,7 @@ h3 {
 .block {
   background: #444;
   transform: translateY(0);
-  transition: all 0.5s ease;
+  transition: all 0.3s ease;
   cursor: cell;
 }
 
@@ -75,7 +79,7 @@ h3 {
 .block + .block-overlay {
   background: #fff;
   transform: translateY(0);
-  transition: all 0.5s ease;
+  transition: all 0.3s ease;
   opacity: 0;
   border-radius: var(--border-radius);
 }
@@ -84,7 +88,7 @@ h3 {
   --ypos: calc(var(--block-size)/2 - var(--block-size));
   transform: translateY(var(--ypos));
   opacity: 1;
-  transition: all 0.5s ease;
+  transition: all 0.3s ease;
   pointer-events: none;
 }
 
@@ -236,6 +240,10 @@ h3 {
 
 .m-b-5 {
   margin-bottom: 5px;
+}
+
+.m-b-10 {
+  margin-bottom: 10px;
 }
 
 .m-t-10 {
