--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  background-color: #000;
+  background-color: #333;
 }
 
 h3 {
@@ -23,7 +23,11 @@ h3 {
   margin: 40px auto;
   padding: 30px 20px;
   background: #444;
-  border-radius: 5px;
+  border-radius: 8px;
+  border-top: 1px solid #888;
+  border-left: 1px solid #555;
+  border-right: 1px solid #555;
+  border-bottom: 1px solid #555;
 }
 
 .block-wrapper {
@@ -40,12 +44,20 @@ h3 {
   align-items: center;
 }
 
-.shadow {
-  box-shadow: 0 1px 1px -10px rgba(0,0,0,0.5), 
-              0 2px 2px -10px rgba(0,0,0,0.5), 
-              0 4px 4px -10px rgba(0,0,0,0.5), 
-              0 8px 8px -10px rgba(0,0,0,0.5),
-              0 16px 16px -10px rgba(0,0,0,0.5);
+.shadow-medium {
+  box-shadow: 0 1px 1px -10px rgba(0,0,0,0.3), 
+              0 2px 2px -10px rgba(0,0,0,0.3), 
+              0 4px 4px -10px rgba(0,0,0,0.3), 
+              0 8px 8px -10px rgba(0,0,0,0.3),
+              0 16px 16px -10px rgba(0,0,0,0.3);
+}
+
+.shadow-strong {
+  box-shadow: 0 1px 1px -10px rgba(0,0,0,0.8), 
+              0 2px 2px -10px rgba(0,0,0,0.8), 
+              0 4px 4px -10px rgba(0,0,0,0.8), 
+              0 8px 8px -10px rgba(0,0,0,0.8),
+              0 16px 16px -10px rgba(0,0,0,0.8);
 }
 
 .fa-gradient {
@@ -145,21 +157,22 @@ h3 {
   vertical-align: top;
   border-radius: 2px;
   cursor: pointer;
-  z-index: 0;
+  z-index: 1;
 }
 
 .swatch:hover, .swatch.active {
   border: 1px solid white;
-  transform: scale(1.2);
-  transition: all 0.3s ease;
+  /* transform: scale(1.2); */
+  /* transition: all 0.3s ease; */
 }
 
 .swatch.active {
-  z-index: 1;
+  z-index: 5;
 }
 
 .swatch:hover {
-  z-index: 2;
+  z-index: 10;
+
 }
 
 /***********/
