--- a/style.css
+++ b/style.css
@@ -38,41 +38,29 @@ h3 {
   width: var(--block-size);
 }
 
+.info {
+  position: absolute;
+  left: calc(50% - 1rem);
+  top: calc(50% - 1rem);
+  pointer-events: none;
+}
+
+.info > .fa-info-circle {
+  font-size: 2rem;
+  color: #ffffff99;
+  opacity: 1;
+  transition: opacity 0.3s ease;
+}
+
+.block:hover ~ .info > .fa-info-circle {
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
 .centre {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.shadow-medium {
-  box-shadow: 0 1px 1px -10px rgba(0,0,0,0.3), 
-              0 2px 2px -10px rgba(0,0,0,0.3), 
-              0 4px 4px -10px rgba(0,0,0,0.3), 
-              0 8px 8px -10px rgba(0,0,0,0.3),
-              0 16px 16px -10px rgba(0,0,0,0.3);
-}
-
-.shadow-strong {
-  box-shadow: 0 1px 1px -10px rgba(0,0,0,0.8), 
-              0 2px 2px -10px rgba(0,0,0,0.8), 
-              0 4px 4px -10px rgba(0,0,0,0.8), 
-              0 8px 8px -10px rgba(0,0,0,0.8),
-              0 16px 16px -10px rgba(0,0,0,0.8);
-}
-
-.fa-gradient {
-	background: radial-gradient(circle at 50% 0,
-      rgba(255,0,0,1),
-      rgba(255,0,0,0) 60%),
-    radial-gradient(circle at 6.7% 75%,
-      rgb(255, 230, 0),
-      rgba(0,0,255,0) 60%),
-    radial-gradient(circle at 93.3% 75%,
-      rgb(174, 0, 255),
-      rgba(0,255,0,0) 60%) white;
-	-webkit-background-clip: text;
-	background-clip: text;
-	-webkit-text-fill-color: transparent;
 }
 
 .block {
@@ -88,7 +76,7 @@ h3 {
   border-radius: var(--border-radius);
 }
 
-.block + .block-overlay {
+.block ~ .block-overlay {
   background: #fff;
   transform: translateY(0);
   transition: all 0.3s ease;
@@ -96,7 +84,7 @@ h3 {
   border-radius: var(--border-radius);
 }
 
-.block:hover + .block-overlay {
+.block:hover ~ .block-overlay {
   --ypos: calc(var(--block-size)/2 - var(--block-size));
   transform: translateY(var(--ypos));
   opacity: 1;
@@ -131,7 +119,7 @@ h3 {
   text-decoration: none;
 }
 
-.fa-info-circle, .fa-palette {
+.block-overlay > h4 > .fa-info-circle {
   color: rgb(160, 160, 160);
 }
 
@@ -173,6 +161,37 @@ h3 {
 .swatch:hover {
   z-index: 10;
 
+}
+
+.shadow-medium {
+  box-shadow: 0 1px 1px -10px rgba(0,0,0,0.3), 
+              0 2px 2px -10px rgba(0,0,0,0.3), 
+              0 4px 4px -10px rgba(0,0,0,0.3), 
+              0 8px 8px -10px rgba(0,0,0,0.3),
+              0 16px 16px -10px rgba(0,0,0,0.3);
+}
+
+.shadow-strong {
+  box-shadow: 0 1px 1px -10px rgba(0,0,0,0.8), 
+              0 2px 2px -10px rgba(0,0,0,0.8), 
+              0 4px 4px -10px rgba(0,0,0,0.8), 
+              0 8px 8px -10px rgba(0,0,0,0.8),
+              0 16px 16px -10px rgba(0,0,0,0.8);
+}
+
+.fa-gradient {
+	background: radial-gradient(circle at 50% 0,
+      rgba(255,0,0,1),
+      rgba(255,0,0,0) 60%),
+    radial-gradient(circle at 6.7% 75%,
+      rgb(255, 230, 0),
+      rgba(0,0,255,0) 60%),
+    radial-gradient(circle at 93.3% 75%,
+      rgb(174, 0, 255),
+      rgba(0,255,0,0) 60%) white;
+	-webkit-background-clip: text;
+	background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 
 /***********/
