--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 *, body, html {
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Raleway', sans-serif;
   margin: 0;
+  line-height: 1.5;
 }
 
 :root {
@@ -85,7 +86,7 @@ h3 {
 }
 
 .block:hover ~ .block-overlay {
-  --ypos: calc(var(--block-size)/2 - var(--block-size));
+  --ypos: calc(var(--block-size)/3 - var(--block-size));
   transform: translateY(var(--ypos));
   opacity: 1;
   transition: all 0.3s ease;
@@ -199,7 +200,6 @@ h3 {
 /***********/
 
 .btn {
-  font-family: Arial, Helvetica, sans-serif;
   border-radius: 5px;
   border: none;
   padding: 3px 6px;
@@ -207,6 +207,7 @@ h3 {
   cursor: pointer;
   transition: all 0.2s ease;
   outline: 0;
+  font-weight: 600;
 }
 
 .btn:hover {
