--- a/style.css
+++ b/style.css
@@ -6,8 +6,11 @@
 }
 
 :root {
-  --block-size: 240px;
+  --scroll-track-width: 10px;
+  --block-size-unit: 240px;
+  --block-size: calc(var(--block-size-unit) + var(--scroll-track-width));
   --border-radius: 7px;
+  --swatch-size: calc(var(--block-size-unit) / 4);
 }
 
 body {
@@ -16,13 +19,24 @@ body {
 
 h3 {
   font-family: 'Merienda One', cursive;
-  font-size: 1.875rem;
+  font-size: 1.5rem;
+}
+
+.centre {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.vh-100 {
+  height: 100vh;
 }
 
 .wrapper {
   max-width: 400px;
   margin: 40px auto;
-  padding: 30px 20px;
+  padding: 30px;
   background: #444;
   border-radius: 8px;
   border-top: 1px solid #888;
@@ -56,12 +70,6 @@ h3 {
 .block:hover ~ .info > .fa-info-circle {
   opacity: 0;
   transition: opacity 0.3s ease;
-}
-
-.centre {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .block {
@@ -109,7 +117,6 @@ h3 {
 }
 
 .hex-value::after {
-  /* <i class="fas fa-external-link-alt"></i> */
   font-family: "Font Awesome 5 Free"; 
   font-weight: 900; 
   content: "\f35d";
@@ -134,17 +141,41 @@ h3 {
 /***********/
 
 .swatch-wrapper {
-  width: var(--block-size);
+  width: calc(var(--block-size));
+  overflow-y: hidden;
+  max-height: calc(var(--block-size) - var(--scroll-track-width));
+  min-height: calc(var(--block-size) - var(--scroll-track-width));
+}
+
+.swatch-wrapper::-webkit-scrollbar-track {
+  border-radius: var(--scroll-track-width);
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  background-color: #333;
+}
+
+.swatch-wrapper::-webkit-scrollbar {
+  width: var(--scroll-track-width);
+  background-color: none;
+}
+
+.swatch-wrapper::-webkit-scrollbar-thumb {
+  border-radius: var(--scroll-track-width);
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: #666;
+}
+
+.overflow-y-scroll {
+  overflow-y: scroll;
 }
 
 .swatch {
   display: none;
-  width: 40px;
-  height: 40px;
+  width: var(--swatch-size);
+  height: var(--swatch-size);
   margin: 0;
   padding: 0;
   vertical-align: top;
-  border-radius: 3px;
+  border-radius: 4px;
   cursor: pointer;
   z-index: 1;
 }
