--- a/style.css
+++ b/style.css
@@ -275,6 +275,22 @@ h3 {
   color: #fff;
 }
 
+.text-grey {
+  color: #999;
+}
+
+.text-grey > a {
+  color: #aaa;
+}
+
+.text-grey > a:hover {
+  color: #ccc;
+}
+
+.text-center {
+  text-align: center;
+}
+
 /*********************/
 /* Padding & margins */
 /*********************/
